--- a/ejercicios/ejercicio1/index.html
+++ b/ejercicios/ejercicio1/index.html
@@ -15,7 +15,7 @@
   </p>
 
   <form id="form">
-    <input type="text" pattern="^(\d+,?)+$" id="input">
+    <input type="text" pattern="^(-?\d+,?)+$" id="input">
 
     <input type="submit" value="Calcular">
     <input type="reset" value="Limpiar">
