--- a/ejercicios/ejercicio2/index.html
+++ b/ejercicios/ejercicio2/index.html
@@ -20,9 +20,9 @@
 
   <form id="form">
     <label for="input1">Array 1</label>
-    <input type="text" pattern="^(\d+,?)+$" id="input1">
+    <input type="text" pattern="^(-?\d+,?)+$" id="input1">
     <label for="input2">Array2</label>
-    <input type="text" pattern="^(\d+,?)+$" id="input2">
+    <input type="text" pattern="^(-?\d+,?)+$" id="input2">
 
     <input type="submit" value="Concatenar">
     <input type="reset" value="Limpiar">
